--- a/css/components/password_generator.css
+++ b/css/components/password_generator.css
@@ -47,11 +47,10 @@ body{
     top:0;
 }
 
-#org_logos{
-    max-width:90%;
-    max-height:90%;
-
-}
+/*#org_logos{*/
+    /*max-width:90%;*/
+    /*max-height:90%;*/
+/*}*/
 
 
 text:focus, input:focus{
