--- a/css/components/landing.css
+++ b/css/components/landing.css
@@ -1,35 +1,34 @@
 body {
-  position: relative;
+  	position: relative;
 }
 
 body::before,
 body::after {
-  content: ''; 
-  position: fixed; 
-  bottom: 0; 
-  right: 0;
-  z-index: -1;
-  	
+  	content: ''; 
+  	position: fixed; 
+  	bottom: 0; 
+  	right: 0;
+  	z-index: -1;	
 }
 
 body::before {
-  width: 250px; 
-  height: 75%;
-  background: var(--theme-lighter-green);
-  transform-origin: top left;
-  -ms-transform: skew(-3deg, 0deg);
-  -webkit-transform: skew(-3deg, 0deg);
-  transform: skew(-3deg, 0deg);
+  	width: 250px; 
+ 	height: 75%;
+  	background: var(--theme-lighter-green);
+  	transform-origin: top left;
+  	-ms-transform: skew(-3deg, 0deg);
+  	-webkit-transform: skew(-3deg, 0deg);
+  	transform: skew(-3deg, 0deg);
 }
 
 body::after {
 	top: 0;	 
-  width: 300px; 
-  background: var(--theme-green);
-  transform-origin: top left;
-  -ms-transform: skew(8deg, 0deg);
-  -webkit-transform: skew(8deg, 0deg);
-  transform: skew(8deg, 0deg);
+  	width: 300px; 
+  	background: var(--theme-green);
+  	transform-origin: top left;
+  	-ms-transform: skew(8deg, 0deg);
+  	-webkit-transform: skew(8deg, 0deg);
+  	transform: skew(8deg, 0deg);
 }
 
 #title {
@@ -62,11 +61,25 @@ body::after {
 #landing-container {
 	width: calc(100vw - 300px);
 	text-align: center;
-}
+	min-height: 100vh;
+} 
 
 #landing-child {
 	display: inline-block;
 	text-align: left;
-	height: 60vh;
+	min-height: 60vh;
 	margin-top: 20vh;
+	position: relative;
+}
+
+@media screen and (max-height: 800px) {
+	body {
+		height: 800px;
+		overflow-y: scroll;
+	}
+	#landing-child {
+		height: 60%;
+		margin-top: 20%;
+		min-height: 480px;
+	}
 }
