--- a/vote/static/vote/css/components/candidates-form.css
+++ b/vote/static/vote/css/components/candidates-form.css
@@ -51,7 +51,7 @@
     transform: scale(1);
 }
 
-#candidates-column input[type="submit"] {
+#voting-submit {
     border: 0;
     background: none;
     box-shadow: none;
@@ -70,6 +70,6 @@
     -webkit-transition: all 0.2s ease;
 }
 
-#candidates-column input[type="submit"]:hover {
+#voting-submit:hover {
     filter: brightness(110%);
 }
