--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -18,8 +18,11 @@
     <link href="{% static 'vote/css/components/voting.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'vote/css/components/candidates-row.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'vote/css/components/candidates-form.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/components/vote-summary.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- scripts -->
+    <script src="{% static 'vote/js/abstain.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vote/js/vote_modal.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -50,19 +53,22 @@
         <form method="POST" action="">
             {% csrf_token %}
             <div class="candidates-row clearfix">
-                <div class="candidate-position">Batch President</div>
+                <div class="candidate-position">
+                    Batch President
+                    <button type="button" id="abstain-1" class="abstain" onclick="abstain(1)">Abstain</button>
+                </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
-                    <input type="radio" name="batch-president" value="1" id="president-1" checked>
+                    <input type="radio" name="batch-president" value="1" id="president-1">
                     <label for="president-1"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
                     <div class="candidate-response">
@@ -72,7 +78,7 @@
                     <label for="president-2"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Alysansang Tapat</div>
                     <div class="candidate-response">
@@ -83,19 +89,22 @@
                 </div>
             </div>
             <div class="candidates-row clearfix">
-                <div class="candidate-position">Batch Vice President</div>
+                <div class="candidate-position">
+                    Batch Vice President
+                    <button type="button" id="abstain-1" class="abstain" onclick="abstain(2)">Abstain</button>
+                </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
-                    <input type="radio" name="batch-vice-president" value="1" id="vice-president-1" checked>
+                    <input type="radio" name="batch-vice-president" value="1" id="vice-president-1">
                     <label for="vice-president-1"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
                     <div class="candidate-response">
@@ -105,7 +114,7 @@
                     <label for="vice-president-2"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Alysansang Tapat</div>
                     <div class="candidate-response">
@@ -116,42 +125,63 @@
                 </div>
             </div>
             <div class="candidates-row clearfix">
-                <div class="candidate-position">Legislative Assembly Representative</div>
+                <div class="candidate-position">
+                    Legislative Assembly Representative
+                    <button type="button" id="abstain-1" class="abstain" onclick="abstain(3)">Abstain</button>
+                </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
                     <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
-                    <input type="radio" name="legislative-assembly-representative" value="1"
-                           id="legislative-assembly-representative-1" checked>
+                    <input type="radio" name="legislative-assembly-representative" value="1" id="legislative-assembly-representative-1">
                     <label for="legislative-assembly-representative-1"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
-                    <input type="radio" name="legislative-assembly-representative" value="2"
-                           id="legislative-assembly-representative-2">
+                    <input type="radio" name="legislative-assembly-representative" value="2" id="legislative-assembly-representative-2">
                     <label for="legislative-assembly-representative-2"></label>
                 </div>
                 <div class="candidate">
-                    <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
+                    <img src="assets/svg/user.svg" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
                     <div class="candidate-party">Alysansang Tapat</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
-                    <input type="radio" name="legislative-assembly-representative" value="3"
-                           id="legislative-assembly-representative-3">
+                    <input type="radio" name="legislative-assembly-representative" value="3" id="legislative-assembly-representative-3">
                     <label for="legislative-assembly-representative-3"></label>
                 </div>
             </div>
-            <input type="submit" id="voting-submit" value="Submit my vote"/>
+            <button id="voting-submit" type="button" onclick="showVote()">Submit my vote</button>
+
+            <div id="vote-modal">
+                <div id="vote-summary">
+                    <div class="candidate-row">
+                        <div class="candidate-position">President</div>
+                        <div class="candidate-person">Rodrigo Duterte</div>
+                    </div>
+                    <div class="candidate-row">
+                        <div class="candidate-position">President</div>
+                        <div class="candidate-person">Rodrigo Duterte</div>
+                    </div>
+                    <div class="candidate-row">
+                        <div class="candidate-position">President</div>
+                        <div class="candidate-person">Rodrigo Duterte</div>
+                    </div>
+                    <div id="summary-confirm" class="clearfix">
+                        <button type="button" id="cancel">Revise my votes</button>
+                        <input type="submit" id="confirm" value="Confirm my submission"/>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </div>
