--- a/original-statics/css/components/admin.css
+++ b/original-statics/css/components/admin.css
@@ -33,15 +33,53 @@ body{
 	width: 40px; height: 40px;
 }
 a{
-	color: #EEEEEE;
+	color: #C0C0C0;
 	font-weight: 500;
-
+	text-decoration: none;
 	margin-left: 60px;
+	cursor:pointer;
 }
 a:hover{
 	color: white;
-	cursor:pointer;
+	text-shadow: 0px 0px 5px #EEEEEE;
 }
+#selected{
+	color: white;
+	text-shadow: 0px 0px 5px #EEEEEE;
+}
+/*
+#user-container .dropbtn {
+	font-size: 16px;
+	border: 1px solid white;
+	border: none;
+	outline: none;
+	color: rgb(250, 235, 215);
+	padding: 14px 16px;
+	background-color: inherit;
+	font-weight: bold;
+	display: flex;
+	flex-direction: row;
+}
+#user-container-content {
+	width: auto;
+	display: none;
+	position: absolute;
+	overflow-x: hidden;
+	overflow-y: auto;
+	max-height: 590px;
+	background-color: rgb(28, 30, 34);
+	min-width: 185px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+#user-container:hover .user-container-content {
+	display: block;
+	z-index: 10;
+}
+*/
 #user-container{
 	display: flex;
 	flex-direction: row;
@@ -116,6 +154,28 @@ a:hover{
 	border-bottom: 1px solid #36A472;
 }
 
+#deselect-delete{
+	width: 300px;
+	margin: 0 1% 14px auto;
+
+	display: flex;
+	flex-direction: row;
+}
+#deselect{
+	font-size: 14px;
+	color: #808080;
+	border: none;
+	background-color: inherit;
+	margin-right: 20px;
+
+}
+#delete{
+	font-size: 14px;
+	color: red;
+	border: none;
+	background-color: inherit;
+}
+
 #tab-container{
 	width: 70%; height: 500px;
 	min-height: 400px;
@@ -165,17 +225,7 @@ input[type='checkbox'] {
     transition: background-color .3s ease-out;
 }
 input[type='checkbox']:checked {
-    background-color: #36A472;
-}
-
-table tr td.col-name{
-	width: 15%;
-}
-table tr td.col-id{
-	width: 10%;
-}
-table tr td.col-unit{
-	width: 20%;
+    background: #abd;
 }
 
 .info-container{
@@ -218,6 +268,20 @@ select{
 	margin-right: 50px;
 }
 
+.takes-container{
+	width: 100%; height: 40%;
+	display: flex;
+}
+.response-container{
+	width: 100%; height: 60%;
+}
+.response-textarea{
+	min-width: 100%; min-height: 200px;
+	font-size: 16px;
+	color: #808080;
+	resize: none;
+	padding: 15px;
+}
 .button{
 	width: 200px; height: 50px;
 	font-size: 16px;
