--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -17,6 +17,8 @@
     <link href="{% static 'login/css/components/landing-form.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'login/css/components/landing-logos.css' %}" rel="stylesheet" type="text/css"/>
 
+    <!-- scripts -->
+    <script src="{% static 'login/js/landing-form.js' %}" type="text/javascript"></script>
 </head>
 <body>
 <img src="{% static 'login/assets/png/uxsoc-logo.png' %}" id="uxsoc-logo"/>
@@ -25,15 +27,24 @@
         <div id="title">Welcome to the Elections</div>
 
         <div id="login-label">Ready to vote? Sign in here!</div>
+        {% if messages %}
+            <div>
+                {% for message in messages %}
+                    <p id="error">{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+
         <form id="landing-form" method="POST" action="">
             {% csrf_token %}
             <div class="input-field">
-                <input type="text" name="username" id="id-number" required="required"/>
-                <label for="id-number">email</label>
+                <input type="text" name="username" id="id-number" min="0" required="required"
+                       onkeypress="return isNumberKey(event)"/>
+                <label for="id-number">ID number</label>
             </div>
             <div class="input-field">
-                <input required="required" type="password" name="password" id="passcode"/>
-                <label for="passcode">password</label>
+                <input required="required" type="text" name="password" id="passcode"/>
+                <label for="passcode">passcode</label>
             </div>
             <input type="submit" hidden="hidden"/>
         </form>
