--- a/vote/static/vote/css/components/candidates-row.css
+++ b/vote/static/vote/css/components/candidates-row.css
@@ -40,6 +40,16 @@
     text-align: left;
 }
 
+.candidate-category {
+    font-weight: 900;
+    color: var(--theme-green);
+    font-size: 1.7rem;
+    text-align: center;
+    margin: auto;
+    width: 50%;
+    padding: 20px;
+}
+
 .candidate {
     display: inline-block;
     float: left;
@@ -48,7 +58,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.candidate-name, 
+.candidate-name,
 .candidate-party {
     padding-top: 3px;
     padding-bottom: 3px;
