--- a/vote/static/vote/css/components/vote-summary.css
+++ b/vote/static/vote/css/components/vote-summary.css
@@ -1,19 +1,19 @@
 #vote-modal {
-	display: none;
-    position: fixed; 
-    z-index: 1; 
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 #vote-summary {
-	background-color: #fefefe;
-    margin: 15% auto; 
+    background-color: #fefefe;
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -21,7 +21,7 @@
 
 .candidate-row {
     margin-left: 10px;
-    margin-right: 10px; 
+    margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -35,7 +35,7 @@
     padding-bottom: 5px;
 }
 
-#cancel, 
+#cancel,
 #confirm {
     background: none;
     box-shadow: none;
