--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -259,7 +259,7 @@
                     </div>
                     <input type="radio" name="vice-president-internal" value="1"
                            id="vice-president-internal-1">
-                    <label for="vice-president-internal-1"></label>
+                    <label for="vice-president-internal-1"></label>x
                 </div>
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
