--- a/sysadmin/templates/sysadmin/admin-voter.html
+++ b/sysadmin/templates/sysadmin/admin-voter.html
@@ -13,21 +13,21 @@
 <!-- HEADER BAR THING -->
 <div id="header-container">
     <img id="header-ballot" src="{% static 'sysadmin/assets/svg/ballot-white.svg' %}">
-    <a href="{% url 'sysadmin:voters' %}" id="selected">Voter's List</a>
-    <a href="{% url 'sysadmin:candidates' %}">Candidate's List</a>
+    <a href="{% url 'sysadmin:voters' %}" id="selected">Voters List</a>
+    <a href="{% url 'sysadmin:candidates' %}">Candidates List</a>
     <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
     <a href="{% url 'sysadmin:unit' %}">Unit</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
-        <div id="user-name"> Troy Bolton</div>
+        <div id="user-name">{{ user.first_name }} {{ user.last_name }}</div>
     </div>
-
 </div>
 
 <!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
 <div id="tab-buttons-container">
     <button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all voters</button>
     <button class="tab-buttons" onclick="openTab(event, 'Add')" id="tab-add">Add a voter</button>
+    <button class="tab-buttons" onclick="openTab(event, 'AddMany')" id="tab-bulk">Add voters in bulk</button>
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
 
@@ -46,6 +46,13 @@
 
 <!-- CONTAINER WHERE TABS WILL OCCUPY -->
 <div id="tab-container">
+    {% if messages %}
+        <div>
+            {% for message in messages %}
+                <p {% if message.tags %}id="{{ message.tags }}"{% endif %}>{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
 
     <!-- FIRST TAB -->
     <div id="All" class="tab-content">
@@ -60,6 +67,7 @@
             </tr>
 
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
+            {% comment %}
             <tr class="row-1">
                 <td class="col-checkbox"><input type="checkbox"></td>
                 <td class="col-name">Logan Paul</td>
@@ -89,50 +97,75 @@
                 <td class="col-position">YES</td>
                 <td class="col-status">YES</td>
             </tr>
-
+            {% endcomment %}
+            {% for voter in voters %}
+                <tr class="{% cycle 'row-1' 'row-2' %}">
+                    <td class="col-checkbox"><input type="checkbox"></td>
+                    <td class="col-name">{{ voter.user.last_name }}, {{ voter.user.first_name }}</td>
+                    <td class="col-id">{{ voter.user.username }}</td>
+                    <td class="col-position">
+                        {% if voter.voting_status == 1 %}
+                            Yes
+                        {% else %}
+                            No
+                        {% endif %}
+                    </td>
+                    <td class="col-status">
+                        {% if voter.eligibility_status == 1 %}
+                            Eligible
+                        {% else %}
+                            Not eligible
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
         </table>
     </div>
 
     <!-- SECOND TAB (FORM TAB)-->
-    <form action="" id="Add" class="tab-content">
+    <form action="" id="Add" class="tab-content" method="POST">
+        {% csrf_token %}
         <div class="info-fields-container">
+            <input type="hidden" name="form-type" value="add-voter">
             <div class="info-container">
-                <div class="info-label"> Full Name</div>
-                <input type="text" class="info-input" name="cand-name" placeholder="ex. Logan Paul">
+                <div class="info-label"> First Names (w/ second & middle names)</div>
+                <input type="text" class="info-input" name="voter-firstnames" placeholder="First names"
+                       required="required">
+            </div>
+
+            <div class="info-container">
+                <div class="info-label"> Last Name</div>
+                <input type="text" class="info-input" name="voter-lastname" placeholder="Last name" required="required">
             </div>
 
             <div class="info-container">
                 <div class="info-label"> ID Number</div>
-                <input type="text" class="info-input" name="cand-id" placeholder="ex. 18002738255">
+                <input type="text" class="info-input" name="voter-id" placeholder="ID number" required="required">
             </div>
 
             <div class="info-container">
                 <div class="info-label"> College</div>
-                <select class="info-input" name="cand-college">
-                    <option>CCS</option>
-                    <option>COB</option>
-                    <option>COE</option>
-                    <option>CLA</option>
-                    <option>COS</option>
+                <select class="info-input" name="voter-college" required="required">
+                    <option disabled="disabled" selected="selected">(Select a college)</option>
+                    {% for college in colleges %}
+                        <option>{{ college.name }}</option>
+                    {% endfor %}
                 </select>
             </div>
 
             <div class="info-container">
                 <div class="info-label"> Voting Status</div>
-                <select class="info-input" name="cand-status">
-                    <option>YES</option>
-                    <option>NO</option>
-                    <option>MAYBE</option>
-                    <option>PERHAPS</option>
-                    <option>POSSIBLY</option>
+                <select class="info-input" name="voter-voting-status" required="required">
+                    <option>Hasn't voted yet</option>
+                    <option>Has already voted</option>
                 </select>
             </div>
 
             <div class="info-container">
                 <div class="info-label"> Eligibility Status</div>
-                <select class="info-input" name="cand-position">
-                    <option>Active</option>
-                    <option>Activen't</option>
+                <select class="info-input" name="voter-eligibility-status" required="required">
+                    <option>Eligible</option>
+                    <option>Not eligible</option>
                 </select>
             </div>
 
@@ -143,8 +176,28 @@
             <!-- SUBMIT BUTTON FOR THE TAB -->
             <input class="button confirm" type="submit" value="Add new voter">
         </div>
+
     </form>
 
+    <!-- THIRD TAB (BULK FORM TAB)-->
+    <form action="" id="AddMany" class="tab-content" method="POST">
+        {% csrf_token %}
+        <div class="info-fields-container">
+            <input type="hidden" name="form-type" value="add-voter">
+            <div class="info-container">
+                <div class="info-label"> Upload a text (.txt) file containing the rows:</div>
+                <input type="file" class="info-input" name="voter-firstnames" placeholder="First names"
+                       required="required">
+            </div>
+        </div>
+
+        <div class="info-buttons-container">
+            <button class="button cancel">Cancel</button>
+            <!-- SUBMIT BUTTON FOR THE TAB -->
+            <input class="button confirm" type="submit" value="Add new voter">
+        </div>
+
+    </form>
 </div>
 
 <div id="logo">
