--- a/sysadmin/static/sysadmin/css/components/admin-voter.css
+++ b/sysadmin/static/sysadmin/css/components/admin-voter.css
@@ -7,9 +7,13 @@ table tr td.col-id {
 }
 
 table tr td.col-position {
-    width: 15%;
+    width: 10%;
 }
 
 table tr td.col-status {
     width: 20%;
+}
+
+table tr td.col-save {
+    width: 10%;
 }
