--- a/sysadmin/static/sysadmin/css/components/admin.css
+++ b/sysadmin/static/sysadmin/css/components/admin.css
@@ -385,3 +385,46 @@ select {
     margin-left: 10px;
     line-height: 1.75rem;
 }
+
+div a#download {
+    white-space: nowrap;
+    color: #aabbdd;
+    margin-left: 0px;
+}
+
+div a#download:hover {
+    white-space: nowrap;
+    text-shadow: 0px 0px 5px #36A472;
+    color: #aabbdd;
+    margin-left: 0px;
+}
+
+#save {
+    width: 50px;
+    height: 50px;
+    background-color: #36A472;
+    color: white;
+    border-radius: 5px;
+    transition: background-color .2s ease-out;
+    font-size: 16px;
+    border: none;
+    outline: none;
+}
+
+#save:hover {
+    cursor: pointer;
+    background-color: #6BE772;
+}
+
+#status-input {
+    width: 70%;
+    height: 50px;
+    font-size: 20px;
+
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #36A472;
+
+    outline: none;
+}
+
