--- a/sysadmin/templates/sysadmin/admin-officer.html
+++ b/sysadmin/templates/sysadmin/admin-officer.html
@@ -16,10 +16,10 @@
     <a href="{% url 'sysadmin:voters' %}">Voters List</a>
     <a href="{% url 'sysadmin:candidates' %}">Candidates List</a>
     <a href="{% url 'sysadmin:officers' %}" id="selected">Comelec Officers</a>
-    <a href="{% url 'sysadmin:unit' %}">Unit</a>
+    <a href="{% url 'sysadmin:unit' %}">Units</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
-        <div id="user-name"> Troy Bolton</div>
+        <div id="user-name">{{ user.first_name }} {{ user.last_name }}</div>
     </div>
 
 </div>
@@ -57,6 +57,7 @@
                 <td class="col-address">Email Address</td>
             </tr>
 
+            {% comment %}
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
             <tr class="row-1">
                 <td class="col-checkbox"><input type="checkbox"></td>
@@ -83,7 +84,32 @@
                 <td class="col-id">17496849</td>
                 <td class="col-address">jake_paul@youtube.com</td>
             </tr>
+            {% endcomment %}
+
+            {% for officer in officers %}
+                <tr class="{% cycle 'row-1' 'row-2' %}">
+                    <td class="col-checkbox"><input type="checkbox"></td>
+                    <td class="col-name">{{ officer.last_name }}, {{ officer.first_name }}</td>
+                    <td class="col-id">{{ officer.username }}</td>
+                    <td class="col-address">{{ officer.email }}</td>
+                </tr>
+            {% endfor %}
         </table>
+
+        <div class="pagination">
+            <span class="step-links">
+                {% if officers.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ officers.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="current">Page {{ officers.number }} of {{ officers.paginator.num_pages }}.</span>
+
+                {% if officers.has_next %}
+                    <a href="?page={{ officers.next_page_number }}">next</a>
+                    <a href="?page={{ officers.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
     </div>
 
     <!-- SECOND TAB (FORM TAB)-->
