lscs logo, party arrangement, independent

--- a/login/templates/login/admin_login.html
+++ b/login/templates/login/admin_login.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <img src="{% static 'login/assets/png/uxsoc-logo.png' %}" id="uxsoc-logo"/>
+<img src="{% static 'login/assets/png/lscs.png' %}" id="lscs-logo"/>
 <div id="landing-container">
     <div id="landing-child">
         <div id="title">Welcome to the Elections</div>
