--- a/vote/templates/vote/voting.html
+++ b/vote/templates/vote/voting.html
@@ -64,14 +64,14 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-president" value="1" id="batch-president-1">
                     <label for="batch-president-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -80,11 +80,11 @@
                     </div>
                     <input type="radio" name="batch-president" value="2" id="batch-president-2">
                     <label for="batch-president-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -100,14 +100,14 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
                     <input type="radio" name="batch-vice-president" value="1" id="batch-vice-president-1">
                     <label for="batch-vice-president-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -116,11 +116,11 @@
                     </div>
                     <input type="radio" name="batch-vice-president" value="2" id="batch-vice-president-2">
                     <label for="batch-vice-president-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -136,7 +136,7 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -144,7 +144,7 @@
                            id="legislative-assembly-representative-1">
                     <label for="legislative-assembly-representative-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -154,11 +154,11 @@
                     <input type="radio" name="legislative-assembly-representative" value="2"
                            id="legislative-assembly-representative-2">
                     <label for="legislative-assembly-representative-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -178,14 +178,14 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
                     <input type="radio" name="college-president" value="1" id="college-president-1">
                     <label for="college-president-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -194,11 +194,11 @@
                     </div>
                     <input type="radio" name="college-president" value="2" id="college-president-2">
                     <label for="college-president-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -217,14 +217,14 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
                     <input type="radio" name="president" value="1" id="president-1">
                     <label for="president-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -233,11 +233,11 @@
                     </div>
                     <input type="radio" name="president" value="2" id="president-2">
                     <label for="president-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -253,7 +253,7 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -261,7 +261,7 @@
                            id="vice-president-internal-1">
                     <label for="vice-president-internal-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -271,11 +271,11 @@
                     <input type="radio" name="vice-president-internal" value="2"
                            id="vice-president-internal-2">
                     <label for="vice-president-internal-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -292,7 +292,7 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -300,7 +300,7 @@
                            id="vice-president-external-1">
                     <label for="vice-president-external-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -310,11 +310,11 @@
                     <input type="radio" name="vice-president-external" value="2"
                            id="vice-president-external-2">
                     <label for="vice-president-external-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -331,7 +331,7 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -339,7 +339,7 @@
                            id="secretary-1">
                     <label for="secretary-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -349,11 +349,11 @@
                     <input type="radio" name="secretary" value="2"
                            id="secretary-2">
                     <label for="secretary-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -370,7 +370,7 @@
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Jose Rizal</div>
-                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
+                    <div class="candidate-party">Alysansang Tapat sa Lasallista</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
@@ -378,7 +378,7 @@
                            id="treasurer-1">
                     <label for="treasurer-1"></label>
                 </div>
-                <div class="candidate">
+                <!--<div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Emilio Aguinaldo</div>
                     <div class="candidate-party">Independent party</div>
@@ -388,11 +388,11 @@
                     <input type="radio" name="treasurer" value="2"
                            id="treasurer-2">
                     <label for="treasurer-2"></label>
-                </div>
+                </div>-->
                 <div class="candidate">
                     <img src="{% static 'vote/assets/svg/user.svg' %}" class="candidate-img"/>
                     <div class="candidate-name">Graciano Lopez Jaena</div>
-                    <div class="candidate-party">Alysansang Tapat</div>
+                    <div class="candidate-party">Santugon sa Tawag ng Panahon</div>
                     <div class="candidate-response">
                         <a href="#" class="response-link">Read the response >></a>
                     </div>
